--- a/ru/main.html
+++ b/ru/main.html
@@ -5,46 +5,46 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
         <link rel="canonical" href="https://miningsofware.solutions"> 
-        <link rel="shortcut icon" href="img/favicon.ico"> 
+        <link rel="shortcut icon" href="../img/favicon.ico"> 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
         <!-- <link rel="preload" type="text/css" href="/css/proxima.css" as="style"> -->
         <!-- <link rel="preconnect" href="https://www.google-analytics.com">  -->
         <!-- <link rel="preconnect" href="https://www.googletagmanager.com/">  -->
-        <title>Mining software solutions - best mining firmware</title>
+        <title></title>
         <meta name="description" content="Mining software solutions - best mining firmware"> 
         <!-- <link rel="alternate" hreflang="en" href="/mining/pools/">  -->
-        <link rel="stylesheet" type="text/css" href="css/responsive.css"> 
-        <link rel="stylesheet" type="text/css" href="css/style.css"> 
+        <link rel="stylesheet" type="text/css" href="../css/responsive.css"> 
+        <link rel="stylesheet" type="text/css" href="../css/style.css"> 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-        <script src="js/script.js" type="text/javascript"></script>
+        <script src="../js/script.js" type="text/javascript"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <!-- <script type="text/javascript" src="js/bioep.js"></script> -->
-        <script type="text/javascript">
+        <!-- <script type="text/javascript">
             bioEp.init({
                 html: '',
                 css: ''
             });
-        </script> 
+        </script>  -->
       </head>
     <body>  
 
     <header>
       <nav class="navbar navbar-expand-lg  bg-light shadow-lg fixed-top">
         <div class="container navbar-wrapper">
-          <a class="navbar-brand" href="#"><img src="img/circle.svg" width="7%" alt=""> altyn pool</a>
+          <a class="navbar-brand" href="#"><img src="../img/circle.svg" width="7%" alt=""> altyn pool</a>
           <div class="collapse navbar-collapse">
             <div class="navbar-nav">
-              <a class="nav-link" href="#about-us">About Us</a>
-              <a class="nav-link" href="#our-services">Our services</a>
-              <a class="nav-link" href="#why-us">Why Us</a>
-              <a class="nav-link" href="#main">Our Pool</a>
-              <a class="nav-link" href="#contact-us">Contacts</a>
+              <a class="nav-link" href="#about-us">О нас</a>
+              <a class="nav-link" href="#our-services">Сервисы</a>
+              <a class="nav-link" href="#why-us">Почему мы</a>
+              <a class="nav-link" href="#main">Наш Пул</a>
+              <a class="nav-link" href="#contact-us">Контакты</a>
               <div class="dropdown">
-                <button onclick="dropdownOnClick()" id="lang-btn" class="language-btn">English <img id="lang-carret" src="img/caret-down.svg" width="11px" style="padding-bottom: 4px; margin-left: 4px;" alt=""></button>
+                <button onclick="dropdownOnClick()" id="lang-btn" class="language-btn">Русский <img id="lang-carret" src="../img/caret-down.svg" width="11px" style="padding-bottom: 4px; margin-left: 4px;" alt=""></button>
                 <div id="myDropdown" class="dropdown-content">
-                  <a href="index.html">English</a>
-                  <a href="ru/main.html">Русский</a>
+                  <a href="../index.html">English</a>
+                  <a href="main.html">Русский</a>
                 </div>
               </div>
             </div>
@@ -57,15 +57,15 @@
       </div>
       <div id="mobileSidenav" class="sidenav">
       <div class="slidenav-head">
-        <img src="img/circle.svg" width="48px" alt="">
+        <img src="../img/circle.svg" width="48px" alt="">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       </div>
       <div class="slidenav-menu">
-        <a href="#about-us">About Us</a>
-        <a href="#our-services">What We Do</a>
-        <a href="#why-us">Why Us</a>
-        <a href="#main">Pool</a>
-        <a href="#contact-us">Contacts</a>
+        <a onclick="closeNav()" href="#about-us">О нас</a>
+        <a onclick="closeNav()" href="#our-services">Сервисы</a>
+        <a onclick="closeNav()" href="#why-us">Почему мы</a>
+        <a onclick="closeNav()" href="#main">Наш Пул</a>
+        <a onclick="closeNav()" href="#contact-us">Контакты</a>
       </div>
       <div class="mobile-header-footer"></div>
       </div>
@@ -86,8 +86,8 @@
               
           </div>
           <div class="col-lg-5 col-md-5 col-sm-12 text-block">
-            <h1>Empowering decentralized mining</h1>
-            <button class="yellow-button" onclick="location.href='#contact-us';">Join</button>
+            <h1>Расширение возможностей майнинга</h1>
+            <button class="yellow-button" onclick="location.href='#contact-us';">Присоединиться</button>
           </div>
         </div>
       </div>
@@ -97,30 +97,29 @@
         <h2>about us</h2>
         <div class="row text-block">
         <div class="col-lg-6 col-md-6 col-sm-12 first-text-block">
-          <p >Altyn Pool was created by hands-on miners supporting an idea of network decentralization. The pool is located in Kazakhstan and shows stable performance worldwide.</p>
+          <p >Altyn Pool создан сообществом майнеров с четким пониманием важности децентрализованности сети. Пул обеспечивает стабильную работу в Казахстане и по всему миру.</p>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 second-text-block">
-          <p class="first-text">Altyn Pool team uses professionalism and vast experience to provide miners around the world with uninterrupted and trouble-free mining.</p>
-          <button onclick="location.href='#contact-us';">Join</button>
+          <p class="first-text">Команда Altyn использует профессионализм и обширный опыт для того, чтобы предоставить майнерам непрерывный и бесперебойный майнинг по всему миру.</p>
+          <button onclick="location.href='#contact-us';">Присоединиться</button>
         </div>
         </div>
       </div>
     </section>
     <section id="our-services">
       <div class="container-fluid our-services">
-        <h2>our services</h2>
+        <h2>Сервисы</h2>
         <div class="row">
           <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="text-card">
               <div class="card-head">
                 <p>
-                  Mining advisory
+                    консалтинг
                 </p>
                <div class="middle-line w-70"></div>
               </div>
-
               <p class="card-content">
-                Advisory services for mining pool operators, private miners, and investors. We can find a solution no matter how big your mining business is.              
+                Консультационные услуги для майнеров, майнинг пулов и инвесторов. Мы поможем найти решение независимо от размера вашего бизнеса.             
               </p>
             </div>
           </div>
@@ -128,12 +127,12 @@
             <div class="text-card">
               <div class="card-head">
                 <p>
-                  Firmware
+                    прошивки
                 </p>
                <div class="middle-line w-75"></div>
               </div>
               <p class="card-content">
-                Custom-made firmware for a wide variety of mining devices for a more accurate tuning and a safe increase of mining profit.
+                Прошивки для майнинг устройств для безопасного увеличения прибыли от майнинга.
               </p>
             </div>
           </div>
@@ -143,27 +142,27 @@
             <div class="text-card">
               <div class="card-head">
                 <p>
-                  Mining pool
+                    майнинг пул
                 </p>
                <div class="middle-line w-75"></div>
               </div>
 
               <p class="card-content">
-                A decentralized mining pool located in Kazakhstan and operating worldwide. 
-              </p>
+                Децентрализованный майнинг-пул, расположенный в Казахстане и работающий по всему миру.
+            </p>
             </div>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="text-card">
               <div class="card-head">
                 <p>
-                  Facilities in Kazakhstan
+                    майнинг фермы
                 </p>
                <div class="middle-line w-60"></div>
               </div>
               <p class="card-content">
-                Mining facilities for equipment placement in Kazakhstan and all around the world. 
-              </p>
+                Размещение майнинг оборудования в Казахстане и по всему миру.
+            </p>
             </div>
           </div>
         </div>
@@ -171,33 +170,27 @@
     </section>
     <section id="why-us">
       <div class="container-fluid why-us">
-        <h2>why choose <b>altyn</b>?</h2>
+        <h2>почему <b>altyn</b>?</h2>
         <div class="row">
           <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="text-card">
               <div class="card-head">
-                <p>
-                  most popular coins
-                </p>
+                <p>поддержка монет</p>
                <div class="middle-line w-65"></div>
               </div>
 
               <p class="card-content">
-                We offer mining of Bitcoin, Ehterium and Litecoin.
-              </p>
+                Майнинг BTC, ETH и LTC.
+            </p>
             </div>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="text-card">
               <div class="card-head">
-                <p>
-                  auto-payouts
-                </p>
+                <p>автовыплаты</p>
                <div class="middle-line w-75"></div>
               </div>
-              <p class="card-content">
-                You can transwer mined crypto manually to set up auto-payout to your trusted wallet.
-              </p>
+              <p class="card-content">Автоматические выплаты на кошелек.</p>
             </div>
           </div>
         </div>
@@ -205,28 +198,19 @@
           <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="text-card">
               <div class="card-head">
-                <p>
-                  Fair payouts
-                </p>
+                <p>методы выплат</p>
                <div class="middle-line w-80"></div>
               </div>
-
-              <p class="card-content">
-                Payouts are avalible on FPPS and PPLNS terms.
-              </p>
+              <p class="card-content">FPPS и PPLNS.</p>
             </div>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="text-card">
               <div class="card-head">
-                <p>
-                  Vip Services
-                </p>
+                <p>местная поддержка</p>
                <div class="middle-line w-80"></div>
               </div>
-              <p class="card-content">
-                Premium services and VIP servers.
-              </p>
+              <p class="card-content">Комиссия 0% для казахских майнеров.</p>
             </div>
           </div>
         </div>
@@ -234,28 +218,19 @@
           <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="text-card">
               <div class="card-head">
-                <p>
-                  Local support
-                </p>
+                <p>премиум-сервис</p>
                <div class="middle-line w-70"></div>
               </div>
-
-              <p class="card-content">
-                0% for Kazakh miners.
-              </p>
+              <p class="card-content">Премиальный сервис и VIP серверы.</p>
             </div>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="text-card">
               <div class="card-head">
-                <p>
-                  Crypto exchange 
-                </p>
+                <p>обмен</p>
                <div class="middle-line w-70"></div>
               </div>
-              <p class="card-content">
-                Integration with P2P platform.
-              </p>
+              <p class="card-content">Интеграция с P2P платформой.</p>
             </div>
           </div>
         </div>
@@ -265,7 +240,7 @@
       <div class="container-fluid contact-us">
         <div class="row">
           <h2>
-            want to mine with us?
+            Желаете майнить с нами ?
           </h2>
           <div class="col-lg-6 col-md-6 col-sm-12 input-holder">
             
@@ -274,47 +249,47 @@
               <input type="email" required>
             </div>
             <div class="input-inner">
-              <label for="">Full name *</label>
+              <label for="">Имя *</label>
               <input type="name" required>
             </div>
             <div class="input-inner">
-              <label for="">Company name</label>
+              <label for="">Имя компани</label>
               <input type="text" required>
             </div>
             <div class="row input-double-inner">
               <div class="col-lg-6 col-md-6 col-sm-12 select-block">
                 <select name="location" id="">
-                  <option selected>LOCATION</option>
-                  <option value="1">Asia</option>
-                  <option value="2">Europe</option>
-                  <option value="3">Africa</option>
-                  <option value="4">North America</option>
-                  <option value="5">South America</option>
-                  <option value="6">Australia and Oceania</option>
+                  <option selected>ЛОКАЦИЯ</option>
+                  <option value="1">Азия</option>
+                  <option value="2">Европа</option>
+                  <option value="3">Африка</option>
+                  <option value="4">Северная Америка</option>
+                  <option value="5">Южная Америка</option>
+                  <option value="6">Австралия и Океания</option>
                 </select>
               </div>
               <div class="col-lg-6 col-md-6 col-sm-12 select-block">
                 <select name="interest" id="">
-                  <option selected>INTEREST</option>
-                  <option value="1">Cryptocurrency mining</option>
-                  <option value="2">Crypto exchange</option>
-                  <option value="3">Equipment placement</option>
-                  <option value="4">Firmware manufacturing</option>
-                  <option value="5">Мining investments</option>
-                  <option value="6">Мining pool</option>
+                  <option selected>ИНТЕРЕС(Ы)</option>
+                  <option value="1">Майнинг криптовалют</option>
+                  <option value="2">Криптовалютная биржа</option>
+                  <option value="3">Размещение оборудования</option>
+                  <option value="4">Разработка ПО</option>
+                  <option value="5">Инвестиции в майнинг</option>
+                  <option value="6">Майнинг пул</option>
                 </select>
               </div>
             </div>
             <div class="input-inner-message">
-              <label for="">Message</label>
+              <label for="">Сообщение</label>
               <input type="text">
             </div>
-            <button class="yellow-button">send</button>
+            <button class="yellow-button">Отправить</button>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
             <img src="img/circle.svg" width="200px" style="z-index:5; right: 100; top: 3050; position: absolute;" alt="">
             <img src="img/object_contact.png" width="610px" style="z-index: 4; right:0; top: 2950; position: absolute;"  alt="">
-          </div>
+         </div>
         </div>
       </div>
     </section>
@@ -322,18 +297,18 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-8 col-md-8 col-sm-12">
-            <img src="img/circle.svg" width="4%" style="padding-bottom: 14px;" alt="">
+            <img src="../img/circle.svg" width="4%" style="padding-bottom: 14px;" alt="">
             <p>Altyn pool official<br>Copyright, 2021</p>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-12 footer-menu">
             <div class="row"  style="margin-top: 50px">
               <div class="col-lg-6 col-md-6 col-sm-6">
-                <a href="#about-us">About us</a>
-                <a href="#our-services">What We Do</a>
+                <a href="#about-us">О нас</a>
+                <a href="#our-services">Сервисы</a>
               </div>
               <div class="col-lg-6 col-md-6 col-sm-6 second-footer-nav">
-                <a href="#why-us">Why Us</a>
-                <a href="#contacts">Contacts</a>
+                <a href="#why-us">Почему Altyn?</a>
+                <a href="#contacts">Контакты</a>
               </div>
             </div>
           </div>
