blue images added

--- a/ru/main.html
+++ b/ru/main.html
@@ -74,6 +74,8 @@
       <div class="container-fluid main-block">
         <div class="row">
           <div class="col-7">
+            <img src="img/object_mobile_top.png" class="main-img-mobile" alt="">
+
             <svg width="683" height="536" viewBox="0 0 683 536" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <rect width="683" height="536" fill="url(#pattern0)"/>
               <defs>
@@ -94,7 +96,7 @@
     </section>
     <section id="about-us">
       <div class="container-fluid about-us">
-        <h2>about us</h2>
+        <h2>О нас</h2>
         <div class="row text-block">
         <div class="col-lg-6 col-md-6 col-sm-12 first-text-block">
           <p >Altyn Pool создан сообществом майнеров с четким пониманием важности децентрализованности сети. Пул обеспечивает стабильную работу в Казахстане и по всему миру.</p>
@@ -287,8 +289,8 @@
             <button class="yellow-button">Отправить</button>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
-            <img src="img/circle.svg" width="200px" style="z-index:5; right: 100; top: 3050; position: absolute;" alt="">
-            <img src="img/object_contact.png" width="610px" style="z-index: 4; right:0; top: 2950; position: absolute;"  alt="">
+            <img src="../img/circle.svg" width="200px" style="z-index:5; right: 100; top: 3050; position: absolute;" alt="">
+            <img src="../img/object_contact.png" width="610px" style="z-index: 4; right:0; top: 2950; position: absolute;"  alt="">
          </div>
         </div>
       </div>
