--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
       <div class="container-fluid main-block">
         <div class="row">
           <div class="col-7">
+            <img src="img/object_mobile_top.png" class="main-img-mobile" alt="">
             <svg width="683" height="536" viewBox="0 0 683 536" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <rect width="683" height="536" fill="url(#pattern0)"/>
               <defs>
