--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
       </div>
       <div id="mobileSidenav" class="sidenav">
       <div class="slidenav-head">
-        <img src="img/circle.svg" width="48px" alt="">
+        <img src="img/circle.svg" class="mobile-header-logo" width="48px" alt="">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       </div>
       <div class="slidenav-menu">
         <div class="dropdown-m">
-          <button onclick="dropdownOnClick()" id="lang-btn-m" class="language-btn-m">English</button>
+          <button onclick="dropdownOnClick()" id="lang-btn-m" class="language-btn-m">English  <img id="lang-carret-m" src="img/caret-down-black.svg" width="11px" style="padding-bottom: 4px; margin-left: 4px;" alt=""></button>
           <div id="myDropdown-m" class="dropdown-content-m">
             <a href="index.html">English</a>
             <a href="ru/main.html">Русский</a>
