--- a/ru/main.html
+++ b/ru/main.html
@@ -62,7 +62,7 @@
       </div>
       <div class="slidenav-menu">
         <div class="dropdown-m">
-          <button onclick="dropdownOnClick()" id="lang-btn-m" class="language-btn-m">English  <img id="lang-carret-m" src="img/caret-down-black.svg" width="11px" style="padding-bottom: 4px; margin-left: 4px;" alt=""></button>
+          <button onclick="dropdownOnClick()" id="lang-btn-m" class="language-btn-m">English  <img id="lang-carret-m" src="../img/caret-down-black.svg" width="11px" style="padding-bottom: 4px; margin-left: 4px;" alt=""></button>
           <div id="myDropdown-m" class="dropdown-content-m">
             <a href="index.html">English</a>
             <a href="ru/main.html">Русский</a>
