--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
             <a href="ru/main.html">Русский</a>
           </div>
         </div>
-        <a class="mobile-nav-link" href="#about-us">About Us</a>
-        <a class="mobile-nav-link" href="#our-services">What We Do</a>
-        <a class="mobile-nav-link" href="#why-us">Why Us</a>
-        <a class="mobile-nav-link" href="#main">Pool</a>
-        <a class="mobile-nav-link" href="#contact-us">Contacts</a>
+        <a onclick="closeNav()" class="mobile-nav-link" href="#about-us">About Us</a>
+        <a onclick="closeNav()" class="mobile-nav-link" href="#our-services">What We Do</a>
+        <a onclick="closeNav()" class="mobile-nav-link" href="#why-us">Why Us</a>
+        <a onclick="closeNav()" class="mobile-nav-link" href="#main">Pool</a>
+        <a onclick="closeNav()" class="mobile-nav-link" href="#contact-us">Contacts</a>
       </div>
       <div class="mobile-header-footer"></div>
       </div>
