--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
         <meta charset="utf-8"> 
         <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
-        <link rel="canonical" href="https://miningsofware.solutions"> 
+        <link rel="canonical" href="https://altynpool.com/"> 
         <link rel="shortcut icon" href="img/favicon.ico"> 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-        <!-- <link rel="preload" type="text/css" href="/css/proxima.css" as="style"> -->
-        <!-- <link rel="preconnect" href="https://www.google-analytics.com">  -->
-        <!-- <link rel="preconnect" href="https://www.googletagmanager.com/">  -->
+        <link rel="preconnect" href="https://www.googletagmanager.com/">
+        <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+          new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+          j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+          'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+          })(window,document,'script','dataLayer','GTM-T9ZFBXV');</script>
+        <!-- End Google Tag Manager --> 
         <title>Mining software solutions - best mining firmware</title>
         <meta name="description" content="Mining software solutions - best mining firmware"> 
-        <!-- <link rel="alternate" hreflang="en" href="/mining/pools/">  -->
+        <link rel="alternate" hreflang="en" href="https://altynpool.com"> 
         <link rel="stylesheet" type="text/css" href="css/responsive.css"> 
         <link rel="stylesheet" type="text/css" href="css/style.css"> 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
@@ -28,7 +33,10 @@
         </script> 
       </head>
     <body>  
-
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T9ZFBXV"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <header>
       <nav class="navbar navbar-expand-lg  bg-light shadow-lg fixed-top">
         <div class="container navbar-wrapper">
