--- a/ru/main.html
+++ b/ru/main.html
@@ -4,20 +4,16 @@
         <meta charset="utf-8"> 
         <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
-        <link rel="canonical" href="https://miningsofware.solutions"> 
+        <link rel="canonical" href="https://altynpool.com/"> 
         <link rel="shortcut icon" href="../img/favicon.ico"> 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-        <!-- <link rel="preload" type="text/css" href="/css/proxima.css" as="style"> -->
-        <!-- <link rel="preconnect" href="https://www.google-analytics.com">  -->
-        <!-- <link rel="preconnect" href="https://www.googletagmanager.com/">  -->
         <title></title>
         <meta name="description" content="Mining software solutions - best mining firmware"> 
-        <!-- <link rel="alternate" hreflang="en" href="/mining/pools/">  -->
+        <link rel="alternate" hreflang="ru" href="https://altynpool.com/ru/main.html"> 
         <link rel="stylesheet" type="text/css" href="../css/responsive.css"> 
         <link rel="stylesheet" type="text/css" href="../css/style.css"> 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-        <script src="../js/script.js" type="text/javascript"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <!-- <script type="text/javascript" src="js/bioep.js"></script> -->
         <!-- <script type="text/javascript">
@@ -64,15 +60,15 @@
         <div class="dropdown-m">
           <button onclick="dropdownOnClick()" id="lang-btn-m" class="language-btn-m">English  <img id="lang-carret-m" src="../img/caret-down-black.svg" width="11px" style="padding-bottom: 4px; margin-left: 4px;" alt=""></button>
           <div id="myDropdown-m" class="dropdown-content-m">
-            <a href="index.html">English</a>
-            <a href="ru/main.html">Русский</a>
+            <a href="../index.html">English</a>
+            <a href="main.html">Русский</a>
           </div>
         </div>
-        <a onclick="closeNav()" href="#about-us">О нас</a>
-        <a onclick="closeNav()" href="#our-services">Сервисы</a>
-        <a onclick="closeNav()" href="#why-us">Почему мы</a>
-        <a onclick="closeNav()" href="#main">Наш Пул</a>
-        <a onclick="closeNav()" href="#contact-us">Контакты</a>
+        <a onclick="closeNav()" class="mobile-nav-link" href="#about-us">О нас</a>
+        <a onclick="closeNav()" class="mobile-nav-link" href="#our-services">Сервисы</a>
+        <a onclick="closeNav()" class="mobile-nav-link" href="#why-us">Почему мы</a>
+        <a onclick="closeNav()" class="mobile-nav-link" href="#main">Наш Пул</a>
+        <a onclick="closeNav()" class="mobile-nav-link" href="#contact-us">Контакты</a>
       </div>
       <div class="mobile-header-footer"></div>
       </div>
@@ -81,7 +77,7 @@
       <div class="container-fluid main-block">
         <div class="row">
           <div class="col-7">
-            <img src="img/object_mobile_top.png" class="main-img-mobile" alt="">
+            <img src="../img/object_mobile_top.png" class="main-img-mobile" alt="">
 
             <svg width="683" height="536" viewBox="0 0 683 536" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <rect width="683" height="536" fill="url(#pattern0)"/>
