--- a/ru/main.html
+++ b/ru/main.html
@@ -53,7 +53,7 @@
       </div>
       <div id="mobileSidenav" class="sidenav">
       <div class="slidenav-head">
-        <img src="../img/circle.svg" width="48px" alt="">
+        <img src="../img/circle.svg" class="mobile-header-logo" width="48px" alt="">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       </div>
       <div class="slidenav-menu">
