--- a/ru/main.html
+++ b/ru/main.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" type="text/css" href="../css/responsive.css"> 
         <link rel="stylesheet" type="text/css" href="../css/style.css"> 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+        <script src="../js/script.js" type="text/javascript"></script>
         <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <!-- <script type="text/javascript" src="js/bioep.js"></script> -->
@@ -34,7 +35,7 @@
               <a class="nav-link" href="#about-us">О нас</a>
               <a class="nav-link" href="#our-services">Сервисы</a>
               <a class="nav-link" href="#why-us">Почему мы</a>
-              <a class="nav-link" href="#main">Наш Пул</a>
+              <a class="nav-link" href="#main">Пул</a>
               <a class="nav-link" href="#contact-us">Контакты</a>
               <div class="dropdown">
                 <button onclick="dropdownOnClick()" id="lang-btn" class="language-btn">Русский <img id="lang-carret" src="../img/caret-down.svg" width="11px" style="padding-bottom: 4px; margin-left: 4px;" alt=""></button>
@@ -67,7 +68,7 @@
         <a onclick="closeNav()" class="mobile-nav-link" href="#about-us">О нас</a>
         <a onclick="closeNav()" class="mobile-nav-link" href="#our-services">Сервисы</a>
         <a onclick="closeNav()" class="mobile-nav-link" href="#why-us">Почему мы</a>
-        <a onclick="closeNav()" class="mobile-nav-link" href="#main">Наш Пул</a>
+        <a onclick="closeNav()" class="mobile-nav-link" href="#main">Пул</a>
         <a onclick="closeNav()" class="mobile-nav-link" href="#contact-us">Контакты</a>
       </div>
       <div class="mobile-header-footer"></div>
@@ -265,23 +266,23 @@
               <div class="col-lg-6 col-md-6 col-sm-12 select-block">
                 <select name="location" id="">
                   <option selected>ЛОКАЦИЯ</option>
-                  <option value="1">Азия</option>
-                  <option value="2">Европа</option>
-                  <option value="3">Африка</option>
-                  <option value="4">Северная Америка</option>
-                  <option value="5">Южная Америка</option>
-                  <option value="6">Австралия и Океания</option>
+                  <option value="Азия">Азия</option>
+                  <option value="Европа">Европа</option>
+                  <option value="Африка">Африка</option>
+                  <option value="Северная Америка">Северная Америка</option>
+                  <option value="Южная Америка">Южная Америка</option>
+                  <option value="Австралия и Океания">Австралия и Океания</option>
                 </select>
               </div>
               <div class="col-lg-6 col-md-6 col-sm-12 select-block">
                 <select name="interest" id="">
                   <option selected>ИНТЕРЕС</option>
-                  <option value="5">Инвестиции в майнинг</option>
-                  <option value="2">Криптовалютная биржа</option>
-                  <option value="1">Майнинг криптовалют</option>
-                  <option value="6">Майнинг пул</option>
-                  <option value="3">Размещение оборудования</option>
-                  <option value="4">Разработка ПО</option>
+                  <option value="Инвестиции в майнинг">Инвестиции в майнинг</option>
+                  <option value="Криптовалютная биржа">Криптовалютная биржа</option>
+                  <option value="Майнинг криптовалют">Майнинг криптовалют</option>
+                  <option value="Майнинг пул">Майнинг пул</option>
+                  <option value="Размещение оборудования">Размещение оборудования</option>
+                  <option value="Разработка ПО">Разработка ПО</option>
                 </select>
               </div>
             </div>
@@ -302,8 +303,9 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-8 col-md-8 col-sm-12">
-            <img src="../img/circle.svg" width="4%" style="padding-bottom: 14px;" alt="">
+            <img src="img/circle.svg" class="footer_circle_img" width="4%" style="padding-bottom: 14px;" alt="">
             <p>Altyn pool official<br>Copyright, 2021</p>
+            <img src="img/object_mobile_top.png" class="mobile_img_footer" width="270px"  alt="">
           </div>
           <div class="col-lg-4 col-md-4 col-sm-12 footer-menu">
             <div class="row"  style="margin-top: 50px">
