--- a/ru/main.html
+++ b/ru/main.html
@@ -293,9 +293,9 @@
             <button class="yellow-button">Отправить</button>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
-            <img src="../img/circle.svg" width="200px" style="z-index:5; right: 100; top: 3050; position: absolute;" alt="">
-            <img src="../img/object_contact.png" width="610px" style="z-index: 4; right:0; top: 2950; position: absolute;"  alt="">
-         </div>
+            <img src="../img/circle.svg" class="img_circle" width="200px" style="z-index:5; right: 100; top: 3050; position: absolute;" alt="">
+            <img src="../img/object_contact.png" class="img_full" width="610px" style="z-index: 4; right:0; top: 2950; position: absolute;"  alt="">
+          </div>
         </div>
       </div>
     </section>
@@ -303,9 +303,9 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-8 col-md-8 col-sm-12">
-            <img src="img/circle.svg" class="footer_circle_img" width="4%" style="padding-bottom: 14px;" alt="">
+            <img src="../img/circle.svg" class="footer_circle_img" width="4%" style="padding-bottom: 14px;" alt="">
             <p>Altyn pool official<br>Copyright, 2021</p>
-            <img src="img/object_mobile_top.png" class="mobile_img_footer" width="270px"  alt="">
+            <img src="../img/object_mobile_top.png" class="mobile_img_footer" width="270px"  alt="">
           </div>
           <div class="col-lg-4 col-md-4 col-sm-12 footer-menu">
             <div class="row"  style="margin-top: 50px">
