--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         <script src="js/script.js" type="text/javascript"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <!-- <script type="text/javascript" src="js/bioep.js"></script> -->
-        <script type="text/javascript">
+        <!-- <script type="text/javascript">
             bioEp.init({
                 html: '',
                 css: ''
             });
-        </script> 
+        </script>  -->
       </head>
     <body>  
     <!-- Google Tag Manager (noscript) -->
@@ -70,7 +70,7 @@
       </div>
       <div class="slidenav-menu">
         <div class="dropdown-m">
-          <button onclick="dropdownOnClick()" id="lang-btn-m" class="language-btn-m">English  <img id="lang-carret-m" src="img/caret-down-black.svg" width="11px" style="padding-bottom: 4px; margin-left: 4px;" alt=""></button>
+          <button onclick="dropdownOnClick_mobile()" id="lang-btn-m" class="language-btn-m">English  <img id="lang-carret-m" src="img/caret-down-black.svg" width="11px" style="padding-bottom: 4px; margin-left: 4px;" alt=""></button>
           <div id="myDropdown-m" class="dropdown-content-m">
             <a href="index.html">English</a>
             <a href="ru/main.html">Русский</a>
@@ -444,7 +444,7 @@ var currentTab = (function () {
   }
 </script>
 <script>
-  function dropdownOnClick() {
+  function dropdownOnClick_mobile() {
     document.getElementById("myDropdown-m").classList.toggle("show");
     document.getElementById("lang-btn-m").classList.toggle("lang-btn-borders");
     document.getElementById("lang-carret-m").classList.toggle("rotateimg180");
