select tag changed

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <section id="main">
       <div class="container-fluid main-block">
         <div class="row">
-          <div class="col-7">
+          <div class="col-lg-7 col-md-2 col-sm-12">
             <img src="img/object_mobile_top.png" class="main-img-mobile" alt="">
             <svg width="683" height="536" viewBox="0 0 683 536" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <rect width="683" height="536" fill="url(#pattern0)"/>
@@ -101,7 +101,7 @@
               </svg>
               
           </div>
-          <div class="col-lg-5 col-md-5 col-sm-12 text-block">
+          <div class="col-lg-5 col-md-10 col-sm-12 text-block">
             <h1>Empowering decentralized mining</h1>
             <button class="yellow-button" onclick="location.href='#contact-us';">Join</button>
           </div>
