--- a/index.html
+++ b/index.html
@@ -290,17 +290,17 @@
                 <input type="hidden" name="admin_email" value="info@interhash.by">
                 <input type="hidden" name="form_subject" value="Request for private firmware">
                 <!-- END Hidden Required Fields -->
-            <div class="input-inner">
-              <label id="contact-label" for="">Email *</label>
-              <input type="email" name="email" required>
+            <div class="input-inner form-floating">
+              <input type="email" class="form-control" id="floatingInputEmail" name="email" placeholder="Email *" required>
+              <label for="floatingInputEmail">Email *</label>
             </div>
-            <div class="input-inner">
-              <label for="">Full name *</label>
-              <input type="text" name="name" required>
+            <div class="input-inner form-floating">
+              <input type="name" class="form-control" id="floatingInputName" name="name" placeholder="Full name *" required>
+              <label for="floatingInputEmail">Full name *</label>
             </div>
-            <div class="input-inner">
-              <label for="">Company name</label>
-              <input type="text" name="company_name" required>
+            <div class="input-inner form-floating">
+              <input type="name" class="form-control" id="floatingInputCompanyName" name="name" placeholder="Company name" required>
+              <label for="floatingInputEmail">Company name</label>
             </div>
             <div class="row input-double-inner">
               <div class="col-lg-6 col-md-6 col-sm-12 select-block">
@@ -327,8 +327,7 @@
               </div>
             </div>
             <div class="input-inner-message">
-              <label for="">Message</label>
-              <input type="text" name="email">
+              <textarea type="text" style="overflow: hidden !important;" name="text" id="floatingTextareaMsg"  placeholder="Message" onkeyup="textAreaAdjust(this)" ></textarea>
             </div>
             <button type="submit" value="submit" class="yellow-button">send</button>
           </form>
@@ -364,6 +363,12 @@
         </div>
       </div>
     </footer>
+    <script>
+      function textAreaAdjust(element) {
+  element.style.height = "1px";
+  element.style.height = (25+element.scrollHeight)+"px";
+}
+    </script>
       <script>
     function openNav() {
       document.getElementById("mobileSidenav").style.width = "100%";
