--- a/index.html
+++ b/index.html
@@ -132,12 +132,9 @@
                 <p>
                   Mining advisory
                 </p>
-               <div class="middle-line w-70"></div>
+               <div class="middle-line "></div>
               </div>
-
-              <p class="card-content">
-                Advisory services for mining pool operators, private miners, and investors. We can find a solution no matter how big your mining business is.              
-              </p>
+              <p class="card-content">Advisory services for mining pool operators, private miners, and investors. We can find a solution no matter how big your mining business is.</p>
             </div>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
@@ -146,11 +143,9 @@
                 <p>
                   Firmware
                 </p>
-               <div class="middle-line w-75"></div>
+               <div class="middle-line "></div>
               </div>
-              <p class="card-content">
-                Custom-made firmware for a wide variety of mining devices for a more accurate tuning and a safe increase of mining profit.
-              </p>
+              <p class="card-content">Custom-made firmware for a wide variety of mining devices for a more accurate tuning and a safe increase of mining profit.</p>
             </div>
           </div>
         </div>
@@ -161,12 +156,10 @@
                 <p>
                   Mining pool
                 </p>
-               <div class="middle-line w-75"></div>
+               <div class="middle-line "></div>
               </div>
 
-              <p class="card-content">
-                A decentralized mining pool located in Kazakhstan and operating worldwide. 
-              </p>
+              <p class="card-content">A decentralized mining pool located in Kazakhstan and operating worldwide.</p>
             </div>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
@@ -175,11 +168,9 @@
                 <p>
                   Facilities in Kazakhstan
                 </p>
-               <div class="middle-line w-60"></div>
+               <div class="middle-line "></div>
               </div>
-              <p class="card-content">
-                Mining facilities for equipment placement in Kazakhstan and all around the world. 
-              </p>
+              <p class="card-content">Mining facilities for equipment placement in Kazakhstan and all around the world.</p>
             </div>
           </div>
         </div>
@@ -195,7 +186,7 @@
                 <p>
                   most popular coins
                 </p>
-               <div class="middle-line w-65"></div>
+               <div class="middle-line "></div>
               </div>
 
               <p class="card-content">
@@ -209,7 +200,7 @@
                 <p>
                   auto-payouts
                 </p>
-               <div class="middle-line w-75"></div>
+               <div class="middle-line "></div>
               </div>
               <p class="card-content">
                 You can transwer mined crypto manually to set up auto-payout to your trusted wallet.
@@ -224,7 +215,7 @@
                 <p>
                   Fair payouts
                 </p>
-               <div class="middle-line w-80"></div>
+               <div class="middle-line "></div>
               </div>
 
               <p class="card-content">
@@ -238,7 +229,7 @@
                 <p>
                   Vip Services
                 </p>
-               <div class="middle-line w-80"></div>
+               <div class="middle-line "></div>
               </div>
               <p class="card-content">
                 Premium services and VIP servers.
@@ -253,7 +244,7 @@
                 <p>
                   Local support
                 </p>
-               <div class="middle-line w-70"></div>
+               <div class="middle-line "></div>
               </div>
 
               <p class="card-content">
@@ -267,7 +258,7 @@
                 <p>
                   Crypto exchange 
                 </p>
-               <div class="middle-line w-70"></div>
+               <div class="middle-line "></div>
               </div>
               <p class="card-content">
                 Integration with P2P platform.
