--- a/ru/main.html
+++ b/ru/main.html
@@ -122,7 +122,7 @@
                 <p>
                     консалтинг
                 </p>
-               <div class="middle-line w-75"></div>
+               <div class="middle-line "></div>
               </div>
               <p class="card-content">
                 Консультационные услуги для майнеров, майнинг пулов и инвесторов. Мы поможем найти решение независимо от размера вашего бизнеса.             
@@ -135,7 +135,7 @@
                 <p>
                     прошивки
                 </p>
-               <div class="middle-line w-75"></div>
+               <div class="middle-line "></div>
               </div>
               <p class="card-content">
                 Прошивки для майнинг устройств для безопасного увеличения прибыли от майнинга.
@@ -150,7 +150,7 @@
                 <p>
                     майнинг пул
                 </p>
-               <div class="middle-line w-75"></div>
+               <div class="middle-line "></div>
               </div>
 
               <p class="card-content">
@@ -164,7 +164,7 @@
                 <p>
                     майнинг фермы
                 </p>
-               <div class="middle-line w-70"></div>
+               <div class="middle-line "></div>
               </div>
               <p class="card-content">
                 Размещение майнинг оборудования в Казахстане и по всему миру.
@@ -182,7 +182,7 @@
             <div class="text-card">
               <div class="card-head">
                 <p>поддержка монет</p>
-               <div class="middle-line w-65"></div>
+               <div class="middle-line "></div>
               </div>
 
               <p class="card-content">
@@ -194,7 +194,7 @@
             <div class="text-card">
               <div class="card-head">
                 <p>автовыплаты</p>
-               <div class="middle-line w-75"></div>
+               <div class="middle-line "></div>
               </div>
               <p class="card-content">Автоматические выплаты на кошелек.</p>
             </div>
@@ -205,7 +205,7 @@
             <div class="text-card">
               <div class="card-head">
                 <p>методы выплат</p>
-               <div class="middle-line w-70"></div>
+               <div class="middle-line "></div>
               </div>
               <p class="card-content">FPPS и PPLNS.</p>
             </div>
@@ -214,7 +214,7 @@
             <div class="text-card">
               <div class="card-head">
                 <p>местная поддержка</p>
-               <div class="middle-line w-60"></div>
+               <div class="middle-line "></div>
               </div>
               <p class="card-content">Комиссия 0% для казахских майнеров.</p>
             </div>
@@ -225,7 +225,7 @@
             <div class="text-card">
               <div class="card-head">
                 <p>премиум-сервис</p>
-               <div class="middle-line w-70"></div>
+               <div class="middle-line "></div>
               </div>
               <p class="card-content">Премиальный сервис и VIP серверы.</p>
             </div>
@@ -234,7 +234,7 @@
             <div class="text-card">
               <div class="card-head">
                 <p>обмен</p>
-               <div class="middle-line w-80"></div>
+               <div class="middle-line "></div>
               </div>
               <p class="card-content">Интеграция с P2P платформой.</p>
             </div>
