--- a/index.html
+++ b/index.html
@@ -263,10 +263,11 @@
     <section id="contact-us">
       <div class="container-fluid contact-us">
         <div class="row">
-          <h2>
-            want to mine with us?
-          </h2>
           <div class="col-lg-6 col-md-6 col-sm-12 input-holder">
+            <h2>
+              want to mine with us?
+            </h2>
+            <p>Altyn Pool is a secure product. We care about the privacy of miners, contact us if you want to connect to our service or get advice.</p>
             <form action="">
               	<!-- Hidden Required Fields -->
                 <input type="hidden" name="project_name" value="Miningsoftware.solutions">
@@ -283,7 +284,7 @@
             </div>
             <div class="input-inner form-floating">
               <input type="name" class="form-control" id="floatingInputCompanyName" name="name" placeholder="Company name" required>
-              <label for="floatingInputEmail">Company name</label>
+              <label for="floatingInputEmail">Messenger contact</label>
             </div>
             <div class="row input-double-inner">
               <div class="col-lg-6 col-md-6 col-sm-12 select-block">
