select tag changed

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <h2>about us</h2>
         <div class="row text-block">
         <div class="col-lg-6 col-md-6 col-sm-12 first-text-block">
-          <p >Altyn Pool was created by the Kazahstan mining community. We have a precise understanding of network decentralization importance, as well as realization that Kazakhstan is becoming a key mining region and local pool should bring the industry to a new level.</p>
+          <p >Altyn Pool was created by the Kazakhstan mining community. We have a precise understanding of network decentralization importance, as well as realization that Kazakhstan is becoming a key mining region and local pool should bring the industry to a new level.</p>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 second-text-block">
           <p class="first-text">Altyn Pool team uses unique expertise and vast experience in order to provide miners with uninterrupted and trouble-free mining, as well as a convenient entry point for cooperation with Kazakhstan.</p>
