--- a/ru/main.html
+++ b/ru/main.html
@@ -90,7 +90,7 @@
     </section>
     <section id="about-us">
       <div class="container-fluid about-us">
-        <h2>О нас</h2>
+        <h2>о нас</h2>
         <div class="row text-block">
         <div class="col-lg-6 col-md-6 col-sm-12 first-text-block">
           <p>Altyn pool создан сообществом майнеров для майнеров. У нас есть четкое понимание важности децентрализованности сети, а также осознание того, что Казахстан становится ключевым регионом в майнинге, а локальный пул должен вывести индустрию на новый уровень.</p>
@@ -105,7 +105,7 @@
     </section>
     <section id="our-services">
       <div class="container-fluid our-services">
-        <h2>Сервисы</h2>
+        <h2>сервисы</h2>
         <div class="row">
           <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="text-card">
@@ -220,9 +220,10 @@
       <div class="container-fluid contact-us">
         <div class="row">
           <h2>
-            Желаете майнить с нами ?
+            желаете майнить с нами ?
           </h2>
           <div class="col-lg-6 col-md-6 col-sm-12 input-holder">
+            <p>Altyn Pool - приватный продукт. Мы заботимся о конфиденциальности майнеров, свяжитесь с нами если хотите подключиться к нашему сервису или получить консультацию.</p>
             <form action="">
               <!-- Hidden Required Fields -->
               <input type="hidden" name="project_name" value="Miningsoftware.solutions">
@@ -272,8 +273,8 @@
         </form>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
-            <img src="../img/circle.svg" class="img_circle" width="200px" style="z-index:5; right: 100; top: 3350; position: absolute;" alt="">
-            <img src="../img/object_contact.png" class="img_full" width="610px" style="z-index: 4; right:0; top: 3250; position: absolute;"  alt="">
+            <img src="../img/circle.svg" class="img_circle" width="200px" style="z-index:5; right: 100; top: 3450; position: absolute;" alt="">
+            <img src="../img/object_contact.png" class="img_full" width="610px" style="z-index: 4; right:0; top: 3350; position: absolute;"  alt="">
           </div>
         </div>
       </div>
