--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
               
           </div>
           <div class="col-lg-5 col-md-10 col-sm-12 text-block">
-            <h1>Empowering decentralized mining</h1>
-            <button class="yellow-button" onclick="location.href='#contact-us';">Join</button>
+            <h1>Keep mining<br> while the sun<br> is high</h1>
+            <button class="yellow-button" onclick="location.href='#contact-us';">Start mining</button>
           </div>
         </div>
       </div>
@@ -106,6 +106,7 @@
         <div class="row text-block">
         <div class="col-lg-6 col-md-6 col-sm-12 first-text-block">
           <p >Altyn pool was created by the Kazakhstan mining community. We have a precise understanding of network decentralization importance, as well as realization that Kazakhstan is becoming a key mining region and local pool should bring the industry to a new level.</p>
+          <p>Our pool has offices in Nur-Sultan, Hong Kong and Minsk. We are engaged not only in mining, but also in software development in the field of mining and cryptocurrencies. We do not intend to rest on our accomplishments and are constantly working to improve our products.</p>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 second-text-block">
           <p class="first-text">Altyn pool team uses unique expertise and vast experience in order to provide miners with uninterrupted and trouble-free mining, as well as a convenient entry point for cooperation with Kazakhstan.</p>
@@ -307,8 +308,8 @@
           </form>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
-            <img src="img/circle.svg" class="img_circle" width="200px" style="z-index:5; right: 100; top: 3250; position: absolute;" alt="">
-            <img src="img/object_contact.png" class="img_full" width="610px" style="z-index: 4; right:0; top: 3150; position: absolute;"  alt="">
+            <img src="img/circle.svg" class="img_circle" width="200px" style="z-index:5; right: 100; top: 3450; position: absolute;" alt="">
+            <img src="img/object_contact.png" class="img_full" width="610px" style="z-index: 4; right:0; top: 3350; position: absolute;"  alt="">
           </div>
         </div>
       </div>
