--- a/ru/main.html
+++ b/ru/main.html
@@ -40,8 +40,8 @@
               <div class="dropdown">
                 <button onclick="dropdownOnClick()" id="lang-btn" class="language-btn">Русский <img id="lang-carret" src="../img/caret-down.svg" width="11px" style="padding-bottom: 4px; margin-left: 4px;" alt=""></button>
                 <div id="myDropdown" class="dropdown-content">
-                  <a href="../index.html">English</a>
-                  <a href="main.html">Русский</a>
+                  <a href="../index.html" class="dropdown_rus">English</a>
+                  <a href="main.html" class="dropdown_rus">Русский</a>
                 </div>
               </div>
             </div>
@@ -82,8 +82,8 @@
             <img src="../img/obj_main_3.png" class="main_img" alt="">
           </div>
           <div class="col-lg-5 col-md-8 col-sm-12 text-block">
-            <h1>Расширение возможностей майнинга</h1>
-            <button class="yellow-button" onclick="location.href='#contact-us';">Присоединиться</button>
+            <h1>Майним вместе<br>пока солнце<br>высоко</h1>
+            <button class="yellow-button" onclick="location.href='#contact-us';">Начать майнить</button>
           </div>
         </div>
       </div>
@@ -260,8 +260,8 @@
                 <option value="Cryptocurrency mining">Майнинг криптовалюты</option>
                 <option value="Crypto exchange">Криптовалютная биржа</option>
                 <option value="Equipment placement">Размещение оборудования</option>
-                <option value="Firmware manufacturing">Разработчики ПО</option>
-                <option value="Мining investments">Инвстиции в майнинг</option>
+                <option value="Firmware manufacturing">Разработка ПО</option>
+                <option value="Мining investments">Инвестиции в майнинг</option>
                 <option value="Мining pool">Майнинг пул</option>
               </select>
             </div>
@@ -273,8 +273,8 @@
         </form>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
-            <img src="../img/circle.svg" class="img_circle" width="200px" style="z-index:5; right: 100; top: 3450; position: absolute;" alt="">
-            <img src="../img/object_contact.png" class="img_full" width="610px" style="z-index: 4; right:0; top: 3350; position: absolute;"  alt="">
+            <img src="../img/circle.svg" class="img_circle" width="200px" style="z-index:5; right: 100; top: 3700; position: absolute;" alt="">
+            <img src="../img/object_contact.png" class="img_full" width="610px" style="z-index: 4; right:0; top: 3600; position: absolute;"  alt="">
           </div>
         </div>
       </div>
