--- a/ru/main.html
+++ b/ru/main.html
@@ -29,7 +29,7 @@
     <header>
       <nav class="navbar navbar-expand-lg  bg-light shadow-lg fixed-top">
         <div class="container navbar-wrapper">
-          <a class="navbar-brand" href="#"><img src="../img/circle.svg" width="7%" alt=""> altyn pool</a>
+          <a class="navbar-brand" href="#"><img src="../img/circle.svg" width="27px" alt=""> altyn pool</a>
           <div class="collapse navbar-collapse">
             <div class="navbar-nav">
               <a class="nav-link" href="#about-us">О нас</a>
