--- a/ru/main.html
+++ b/ru/main.html
@@ -74,7 +74,7 @@
       <div class="mobile-header-footer"></div>
       </div>
     </header>
-    <section id="main">
+    <section id="main" class="main-section">
       <div class="container-fluid main-block">
         <div class="row">
           <div class="col-lg-7 col-md-5 col-sm-12">
@@ -88,7 +88,7 @@
         </div>
       </div>
     </section>
-    <section id="about-us">
+    <section id="about-us" class="about-us-section">
       <div class="container-fluid about-us">
         <h2>о нас</h2>
         <div class="row text-block">
@@ -103,7 +103,7 @@
         </div>
       </div>
     </section>
-    <section id="our-services">
+    <section id="our-services" class="our-services-section">
       <div class="container-fluid our-services">
         <h2>сервисы</h2>
         <div class="row">
@@ -150,7 +150,7 @@
         </div>
       </div>
     </section>
-    <section id="why-us">
+    <section id="why-us" class="why-us-section">
       <div class="container-fluid why-us">
         <h2>почему <b>altyn pool</b>?</h2>
         <div class="row">
@@ -216,7 +216,7 @@
         </div>
       </div>
     </section>
-    <section id="contact-us">
+    <section id="contact-us" class="contact-us-section">
       <div class="container-fluid contact-us">
         <div class="row">
           <h2>
@@ -279,6 +279,7 @@
         </div>
       </div>
     </section>
+    <section class="footer-section">
     <footer>
       <div class="container-fluid">
         <div class="row">
@@ -302,6 +303,7 @@
         </div>
       </div>
     </footer>
+  </section>
       <script>
     function openNav() {
       document.getElementById("mobileSidenav").style.width = "100%";
