--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
         <link rel="canonical" href="https://altynpool.com/"> 
         <link rel="shortcut icon" href="img/favicon.ico"> 
+        <meta name="yandex-verification" content="90f5fe3de4132339" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
         <link rel="preconnect" href="https://www.googletagmanager.com/">
         <!-- Google Tag Manager -->
@@ -85,7 +86,7 @@
       <div class="mobile-header-footer"></div>
       </div>
     </header>
-    <section id="main">
+    <section id="main" class="main-section">
       <div class="container-fluid main-block">
         <div class="row">
           <div class="col-lg-7 col-md-5 col-sm-12">
@@ -100,7 +101,7 @@
         </div>
       </div>
     </section>
-    <section id="about-us">
+    <section id="about-us" class="about-us-section">
       <div class="container-fluid about-us">
         <h2>about us</h2>
         <div class="row text-block">
@@ -115,7 +116,7 @@
         </div>
       </div>
     </section>
-    <section id="our-services">
+    <section id="our-services" class="our-services-section">
       <div class="container-fluid our-services">
         <h2>our services</h2>
         <div class="row">
@@ -169,7 +170,7 @@
         </div>
       </div>
     </section>
-    <section id="why-us">
+    <section id="why-us" class="why-us-section">
       <div class="container-fluid why-us">
         <h2>why choose <b>altyn pool</b>?</h2>
         <div class="row">
@@ -256,7 +257,7 @@
         </div>
       </div>
     </section>
-    <section id="contact-us">
+    <section id="contact-us" class="contact-us-section">
       <div class="container-fluid contact-us">
         <div class="row">
           <div class="col-lg-6 col-md-6 col-sm-12 input-holder">
@@ -308,12 +309,13 @@
           </form>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
-            <img src="img/circle.svg" class="img_circle" width="200px" style="z-index:5; right: 100; top: 3450; position: absolute;" alt="">
-            <img src="img/object_contact.png" class="img_full" width="610px" style="z-index: 4; right:0; top: 3350; position: absolute;"  alt="">
+            <img src="img/circle.svg" class="img_circle" width="200px" style="z-index:3; right: 100; top: 3450; position: absolute;" alt="">
+            <img src="img/object_contact.png" class="img_full" width="610px" style="z-index: 2; right:0; top: 3350; position: absolute;"  alt="">
           </div>
         </div>
       </div>
     </section>
+  <section class="footer-section">
     <footer>
       <div class="container-fluid">
         <div class="row">
@@ -338,6 +340,7 @@
         </div>
       </div>
     </footer>
+  </section>
     <script>
       function textAreaAdjust(element) {
   element.style.height = "1px";
