--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class="row text-block">
         <div class="col-lg-6 col-md-6 col-sm-12 first-text-block">
           <p >Altyn pool was created by the Kazakhstan mining community. We have a precise understanding of network decentralization importance, as well as realization that Kazakhstan is becoming a key mining region and local pool should bring the industry to a new level.</p>
-          <p>Our pool has offices in Nur-Sultan, Hong Kong and Minsk. We are engaged not only in mining, but also in software development in the field of mining and cryptocurrencies. We do not intend to rest on our accomplishments and are constantly working to improve our products.</p>
+          <p>We are engaged not only in mining, but also in software development in the field of mining and cryptocurrencies. We do not intend to rest on our accomplishments and are constantly working to improve our products.</p>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 second-text-block">
           <p class="first-text">Altyn pool team uses unique expertise and vast experience in order to provide miners with uninterrupted and trouble-free mining, as well as a convenient entry point for cooperation with Kazakhstan.</p>
@@ -319,22 +319,58 @@
     <footer>
       <div class="container-fluid">
         <div class="row">
-          <div class="col-lg-8 col-md-8 col-sm-12">
+          <div class="col-lg-4 col-md-4 col-sm-12">
             <img src="img/circle.svg" class="footer_circle_img" width="4%" style="padding-bottom: 14px;" alt="">
-            <p>Altyn pool official<br>Copyright, 2021</p>
-            <img src="img/object_mobile_top.png" class="mobile_img_footer" width="270px"  alt="">
-
+            <p>Altyn pool official </p>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-12 footer-menu">
-            <div class="row"  style="margin-top: 50px">
-              <div class="col-lg-6 col-md-6 col-sm-6">
-                <a href="#about-us">About us</a>
-                <a href="#our-services">Our services</a>
+          <div class="col-lg-8 col-md-8 col-sm-12 footer-menu">
+            <div class="row" >
+              <div class="col-lg-4 col-md-4 col-sm-12 first-footer-nav">
+                <div class="column-one">
+                  <p class="menu-header">Pool</p>
+                  <a href="">Sha-256</a>
+                  <a href="">Scrypt</a>
+                  <a href="">Equihash</a>
+                </div>
+              <div class="column-two">
+                <p class="menu-header">Firmware</p>
+                <a href="">Bitmain S9 i/j</a>
+                <a href="">Bitmain S17+/E/Pro</a>
+                <a href="">Bitmain T9+</a>
+                <a href="">Bitmain T17+/E</a>
+                <a href="">Bitmain L3+</a>
               </div>
-              <div class="col-lg-6 col-md-6 col-sm-6 second-footer-nav">
-                <a href="#why-us">Why Us</a>
-                <a href="#contacts">Contacts</a>
+            </div>
+              <div class="col-lg-3 col-md-3 col-sm-12 second-footer-nav">
+                <div class="column-one">
+                  <p class="menu-header">Social</p>
+                  <a href="">Telegram</a>
+                  <a href="">Facebook</a>
+                  <a href="">Twitter</a>
+                  <!-- <a href="">Medium</a> -->
+                  <!-- <a href="">Reddit</a> -->
+                </div>
+                <div class="column-two">
+                  <p class="menu-header">Navigation</p>
+                  <a href="#about-us">About us</a>
+                  <a href="#our-services">Our services</a>
+                  <a href="#why-us">Pool</a>
+                  <a href="#contacts">Contact us</a>
+                </div>
+              <!-- <div class="column-two">
+                <p>Contacts</p>
+                <p>For press<a href="">press@altynpool.com</a></p>
+                <p>Tech support<a href=""></a>support@altynpool.com</p>
+                <p>For data-centers<a href=""></a>dc@altynpool.com</p>
+              </div>   -->
+            </div>            
+              <div class="col-lg-5 col-md-5 col-sm-12 third-footer-nav">
+                <p class="menu-header">Contacts</p>
+                <div class="email-block"><p>For press: </p> <a href="">press@altynpool.com</a></div>
+                <div class="email-block"><p>Tech support: </p> <a href="">support@altynpool.com</a></div>
+                <div class="email-block"><p>For data-centers: </p> <a href="">dc@altynpool.com</a></div>
               </div>
+            </div>
             </div>
           </div>
         </div>
